# routes/web.php
@@ -2,6 +2,15 @@
 
 use Illuminate\Support\Facades\Route;
 use App\Http\Controllers\AdminController;
+use Lcobucci\JWT\Encoding\ChainedFormatter;
+use Lcobucci\JWT\Encoding\JoseEncoder;
+use Lcobucci\JWT\Signer\Key\InMemory;
+use Lcobucci\JWT\Signer\Hmac\Sha256;
+use Lcobucci\JWT\Token\Builder;
+use Ramsey\Uuid\Uuid;
+use Lcobucci\JWT\Signer\Key;
+use Firebase\JWT\JWT;
+
 
 /*
 |--------------------------------------------------------------------------
@@ -15,25 +24,30 @@ use App\Http\Controllers\AdminController;
 */
 
 Route::get('/', function () {
-    return view('welcome');
+/*$userUuid = Uuid::uuid4()->toString();
+//dd($userUuid);
+$tokenBuilder = (new Builder(new JoseEncoder(), ChainedFormatter::default()));
+$algorithm    = new Sha256();
+$signingKey   = InMemory::plainText(random_bytes(32));
+
+//$now   = new DateTimeImmutable();
+try {
+    $token = $tokenBuilder
+    // Configures the issuer (iss claim)
+    ->permittedFor(config("app.url"))
+        ->identifiedBy($userUuid)
+        ->issuedAt(new DateTimeImmutable())
+        ->canOnlyBeUsedAfter(new DateTimeImmutable('+1 minute'))
+        ->expiresAt(new DateTimeImmutable('+1 hour'))
+    ->getToken($algorithm, $signingKey);
+
+   dd($token->toString());
+} catch (Exception $e) {
+    // Handle the exception here
+    dd($e->getMessage());
+}*/
+
+
+  //  return view('welcome');
 });
 
-Route::prefix('api/v1')->middleware(['jwt.token'])->group(function () {
-    // Create a new admin account
-    Route::post('admin/create', [AdminController::class, 'create']);
-
-    // Admin login
-    Route::post('admin/login', [AdminController::class, 'login']);
-
-    // Admin logout
-    Route::get('admin/logout', [AdminController::class, 'logout']);
-
-    // Get user listing (non-admins)
-    Route::get('admin/user-listing', [AdminController::class, 'userListing']);
-
-    // Edit user account by UUID
-    Route::put('admin/user-edit/{uuid}', [AdminController::class, 'editUser']);
-
-    // Delete user account by UUID
-    Route::delete('admin/user-delete/{uuid}', [AdminController::class, 'deleteUser']);
-});
